--- a/style.css
+++ b/style.css
@@ -30,15 +30,14 @@ button {
   border-color: var(--txt-color);
   color: var(--txt-color);
   padding: clamp(0.5rem, 1vw, 1.5rem);
-  width: clamp(8.2rem, 15vw, 20rem);
+  max-width: clamp(8.2rem, 15vw, 20rem);
   margin: auto;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: inline;
   font-size: clamp(1rem, 1.5vw, 2rem);
   border-radius: 0.8rem;
   transition-duration: 0.4s;
-  max-width: 23rem;
   border: 0.1rem solid var(--main-bg-color);
 }
 
@@ -63,14 +62,13 @@ hr {
   color: var(--txt-color);
   padding: clamp(0.5rem, 1.5vw, 2.5rem);
   margin: auto;
-  width: clamp(2rem, 15vw, 20rem);
+  max-width: clamp(8.2rem, 15vw, 20rem);
   text-align: center;
   text-decoration: none;
   display: block;
   font-size: clamp(1rem, 1.5vw, 2rem);
   border-radius: 0.8rem;
   transition-duration: 0.4s;
-  max-width: 25rem;
   float: center;
   border: 0.1rem solid var(--main-bg-color);
 }
@@ -122,31 +120,29 @@ input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
 
 .lAside {
   min-height: 100%;
-  width: 30%;
+  max-width: 100%;
   padding: 1.5rem;
   margin: 1.5rem;
   float: left;
   background-color: var(--second-bg-color);
+  overflow: auto;
 }
 
 .rAside {
   min-height: 100%;
-  width: 30%;
+  max-width: 100%;
   padding: 1.5rem;
   margin: 1.5rem;
   float: right;
   background-color: var(--second-bg-color);
+  overflow: auto;
 }
 
-select {
-  width: 100%;
-  padding: 1.6rem 2rem;
-  border: solid;
-  border-color: var(--main-bg-color);
-  color: var(--txt-color);
-  border-width: 0.1rem;
-  border-radius: 0.4rem;
-  background-color: var(--second-bg-color);
+@media only screen and (max-width: 768px) {    
+  .lAside, .rAside {
+    float: none;
+    max-width: 100%;
+  }
 }
 
 .center {
@@ -156,11 +152,17 @@ select {
   text-align: center;
   flex-direction: column;
   margin: 1.5rem;
+  overflow: scroll;
 }
 
 video {
-  max-width: 100%;
-  height: auto;
+  width: 65%;
+}
+
+@media only screen and (max-width: 768px) {    
+  video {
+    width: 100%;
+  }
 }
 
 dialog {
@@ -179,7 +181,6 @@ ul {
   list-style-type: none;
   margin: 0.5rem;
   padding: 0;
-  overflow: auto;
 }
 
 ul li {
@@ -197,7 +198,7 @@ a:hover {
 }
 
 .container {
-  width: 50%;
+  width: 65%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -205,7 +206,13 @@ a:hover {
   flex-direction: column;
   background-color: var(--second-bg-color);
   color: var(--txt-color);
-  text-align: center;
+}
+
+@media only screen and (max-width: 768px) {    
+  .container {
+    width: 100%;
+    flex-direction: row;
+  }
 }
 
 h1 {
