--- a/style.css
+++ b/style.css
@@ -5,42 +5,35 @@
 }
 
 body {
-  margin-bottom: 20rem;
-  clear: both;
+  margin-bottom: 10rem;
 	background-color: var(--main-bg-color);
   font-family: 'Trebuchet MS', sans-serif;
-}
-
-main {
-  margin: 0rem;
-  padding: 0.5rem;
-  background-color: var(--main-bg-color);
+  color: var(--txt-color);
 }
 
 header {
-  padding: clamp(1rem, 1.2vw, 1.5rem);
-  text-align: center;
+  padding: clamp(0.2rem, 0.5vw, 1rem);
   background-color: var(--second-bg-color);
-  color: var(--txt-color);
 }
 
-button {
+button, 
+input[type=button] {
   background-color: var(--second-bg-color);
   border-color: var(--txt-color);
-  color: var(--txt-color);
   padding: clamp(0.5rem, 1vw, 1.5rem);
   width: clamp(8.2rem, 15vw, 20rem);
   margin: auto;
-  text-align: center;
   text-decoration: none;
   display: inline;
   font-size: clamp(1rem, 1.5vw, 2rem);
+  color: var(--txt-color);
   border-radius: 0.8rem;
   transition-duration: 0.4s;
   border: 0.1rem solid var(--main-bg-color);
 }
 
-button:hover {
+button:hover, 
+input[type=button]:hover {
   background-color: var(--txt-color);
   border-color: var(--txt-color);
   color: var(--second-bg-color);
@@ -69,70 +62,22 @@ fieldset {
 
 legend {
   background-color: var(--second-bg-color);
-  color: var(--txt-color);
   font-size: clamp(2rem, 3vw, 3.5rem);
   padding: 5px 10px;
-}
-
-.liveButton {
-  background-color: var(--second-bg-color);
-  border-color: var(--txt-color);
-  color: var(--txt-color);
-  padding: clamp(0.5rem, 1.5vw, 2rem);
-  margin: auto;
-  max-width: clamp(8.2rem, 15vw, 20rem);
-  text-align: center;
-  text-decoration: none;
-  display: block;
-  font-size: clamp(1rem, 1.25vw, 1.5rem);
-  border-radius: 0.8rem;
-  transition-duration: 0.4s;
-  float: center;
-  border: 0.1rem solid var(--main-bg-color);
-}
-
-.liveButton:hover {
-  background-color: var(--txt-color);
-  border-color: var(--txt-color);
-  color: var(--second-bg-color);
 }
 
 label {
   font-size: clamp(1rem, 3vw, 4rem);
   padding: clamp(0.5rem, 1vw, 2rem);
   display: inline-block;
-  color: var(--txt-color);
 }
 
 input[type=text], input[type=password] {
-  min-width: 100%;
   padding: 1.2rem 2.0rem;
   margin: 0.8rem;
   box-sizing: border-box;
   border: 0.2rem solid var(--txt-color);
   border-radius: 0.4rem;
-}
-
-input[type=button], input[type=submit] {
-  text-align: center;
-  display: inline-block;
-  font-size: clamp(1rem, 3vw, 4rem);
-  background-color: var(--second-bg-color);
-  border: solid;
-  border-width: 0.1rem;
-  color: var(--txt-color);
-  padding: clamp(1rem, 2.5vw, 3rem);
-  text-decoration: none;
-  margin: auto;
-  cursor: pointer;
-  border-radius: 0.8rem;
-  transition-duration: 0.4s;
-  float: center;
-}
-
-input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
-  background-color: var(--txt-color);
-  color: var(--second-bg-color);
 }
 
 aside {
@@ -180,10 +125,10 @@ ul {
 ul li {
   margin: clamp(0rem, 0.2vw, 0.5rem);
   display: inline;
+  margin: 1rem;
 }
 
 a {
-  color: var(--txt-color);
   text-decoration: none;
 }
 
@@ -192,6 +137,7 @@ a:hover {
 }
 
 .container {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -199,23 +145,9 @@ a:hover {
   flex-direction: row;
   flex-wrap: wrap;
   background-color: var(--second-bg-color);
-  color: var(--txt-color);
-}
-
-.list-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 100%;
-  background-color: var(--second-bg-color);
-  color: var(--txt-color);
 }
 
 h1 {
-  color: var(--txt-color);
   text-align: center;
   display: block;
   font-size: clamp(2rem, 3vw, 3.5rem);
@@ -223,16 +155,7 @@ h1 {
   font-weight: bold;
 }
 
-.large-pre {
-  display: block;
-  font-size: clamp(1rem, 2vw, 2.5rem);
-  padding: clamp(0.5rem, 0.7vw, 1rem);
-  margin: clamp(0.5rem, 0.7vw, 1rem);
-  font-weight: bold;
-}
-
 p {
-  color: var(--txt-color);
   display: block;
   font-size: clamp(1rem, 1.5vw, 2rem);
   margin: clamp(0.5rem, 1vw, 1.7rem);
@@ -247,24 +170,13 @@ form {
 
 label {
   display: block;
-  text-align: center;
 }
 
 footer {
   position: fixed;
   bottom: 0rem;
   max-height: 10rem;
+  text-align: center;
   width: 100%;
   background-color: var(--second-bg-color);
-  color: var(--txt-color);
-  text-align: center;
-}
-
-pre {
-  display: block;
-  color: var(--txt-color);
-  font-family: monospace;
-  white-space: pre;
-  padding: 1em;
-  margin: 1em 0;
 }
