--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-  padding: clamp(0.2rem, 0.5vw, 1rem);
+  padding: clamp(0.1rem, 0.3vw, 0.5rem);
   background-color: var(--second-bg-color);
 }
 
@@ -50,32 +50,25 @@ hr {
   border: 0.1rem solid var(--txt-color);
 }
 
-.form-inline {
-  display: flex;
-  flex-direction: row
-}
-
 fieldset {
   width: 100%;
   background-color: var(--second-bg-color);
 }
 
 legend {
-  background-color: var(--second-bg-color);
   font-size: clamp(2rem, 3vw, 3.5rem);
-  padding: 5px 10px;
+  padding: 0.2rem;
 }
 
 label {
   font-size: clamp(1rem, 3vw, 4rem);
-  padding: clamp(0.5rem, 1vw, 2rem);
-  display: inline-block;
+  padding: clamp(0.5rem, 1vw, 1.5rem);
+  display: block;
 }
 
 input[type=text], input[type=password] {
   padding: 1.2rem 2.0rem;
   margin: 0.8rem;
-  box-sizing: border-box;
   border: 0.2rem solid var(--txt-color);
   border-radius: 0.4rem;
 }
@@ -105,8 +98,7 @@ aside {
 }
 
 dialog {
-  padding: 0.6rem;
-  border: 0;
+  padding: 0.6rem; 
   border-radius: 0.6rem;
   background-color: var(--second-bg-color);
   box-shadow: 0 0 1em var(--txt-color);
@@ -119,7 +111,6 @@ dialog:backdrop {
 ul {
   list-style-type: none;
   margin: 0.5rem;
-  padding: 0;
 }
 
 ul li {
@@ -129,6 +120,7 @@ ul li {
 }
 
 a {
+  color: var(--txt-color);
   text-decoration: none;
 }
 
@@ -148,15 +140,12 @@ a:hover {
 }
 
 h1 {
-  text-align: center;
-  display: block;
   font-size: clamp(2rem, 3vw, 3.5rem);
   margin: 0.67em, 0;
   font-weight: bold;
 }
 
 p {
-  display: block;
   font-size: clamp(1rem, 1.5vw, 2rem);
   margin: clamp(0.5rem, 1vw, 1.7rem);
 }
@@ -164,17 +153,11 @@ p {
 form {
   background-color: var(--second-bg-color);
   border-radius: 2rem;
-  box-sizing: border-box;
-  padding: 2rem;
-}
-
-label {
-  display: block;
 }
 
 footer {
   position: fixed;
-  bottom: 0rem;
+  bottom: 0;
   max-height: 10rem;
   text-align: center;
   width: 100%;
