--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
   margin-bottom: 10rem;
 	background-color: var(--main-bg-color);
-  font-family: 'Trebuchet MS', sans-serif;
+  font-family: 'Harman Sans', sans;
   color: var(--txt-color);
 }
 
