updated peer array

--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ a:hover {
 }
 
 .container {
-  width: 100%;
+  width: auto;
   display: flex;
   justify-content: center;
   align-items: center;
