--- a/css/style.css
+++ b/css/style.css
@@ -16,17 +16,31 @@ header {
   background-color: var(--second-bg-color);
 }
 
+main {
+  animation: slide 1s;
+}
+
+@keyframes slide{
+  from {
+    opacity: 0.5;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 form {
   animation: transitionIn 1.5s;
 }
 
 @keyframes transitionIn {
   from {
-    opacity: 0;
+    transform: translateY(1rem);
   }
 
   to {
-    opacity: 1;
+    transform: translateY(0);
   }
 }
 
